--- a/src/content/docs/expert/pt/top-expert/benefits.mdx
+++ b/src/content/docs/expert/pt/top-expert/benefits.mdx
@@ -9,167 +9,157 @@ O estatuto Top Expert desbloqueia funcionalidades e benefícios premium desenhad
 
 ## Benefícios Financeiros
 
-### Taxas de Plataforma Mais Baixas
+<Tabs items={['Taxas Mais Baixas', 'Pagamentos Mais Rápidos']}>
+  <Tab value="Taxas Mais Baixas">
+    **Taxas de Plataforma Mais Baixas**
 
-O benefício mais significativo—fique com mais do que ganha:
+    Mantenha mais do que ganha:
 
-| Plano | Especialista da Comunidade | Top Expert | Poupança |
-|-------|---------------------------|------------|----------|
-| Apenas Comissão | 20% | 15% | 5% por marcação |
-| Subscrição | 12% | 8% | 4% por marcação |
+    | Plano | Community | Top Expert | Poupança |
+    |-------|-----------|------------|----------|
+    | Só Comissão | 20% | 15% | 5% por marcação |
+    | Subscrição | 12% | 8% | 4% por marcação |
 
-**Exemplo de Impacto:**
+    **Exemplo de Impacto:**
 
-Em €10.000 em marcações (plano de subscrição):
-- Especialista da Comunidade: €8.800 (após taxa de 12%)
-- Top Expert: €9.200 (após taxa de 8%)
-- **Poupança Anual: €400+ por €10.000**
+    Em €10,000 de marcações (plano de subscrição):
+    - Community Expert: €8,800 (após 12% de taxa)
+    - Top Expert: €9,200 (após 8% de taxa)
+    - **Poupança Anual: €400+ por €10,000**
 
-### Pagamentos Mais Rápidos
+  </Tab>
+  <Tab value="Pagamentos Mais Rápidos">
+    **Calendário de Pagamentos Mais Rápido**
 
-| Nível | Calendário de Pagamento |
-|-------|------------------------|
-| Comunidade | Semanal (Segundas-feiras) |
-| Top Expert | Diário (disponível) |
+    | Nível | Calendário de Pagamentos |
+    |-------|--------------------------|
+    | Community | Semanal (Segundas) |
+    | Top Expert | Diário (disponível) |
 
-Aceda aos seus ganhos mais rapidamente para gerir melhor o fluxo de caixa.
+    Aceda aos seus ganhos mais rapidamente para melhor gerir o fluxo de caixa.
+
+  </Tab>
+</Tabs>
 
 ## Benefícios de Visibilidade
 
-### Posicionamento Destacado
+<Accordions>
+  <Accordion title="Destaque">
+    Top Experts recebem posicionamento prioritário:
 
-Os Top Experts recebem posicionamento prioritário:
+    - **Secção de Destaque na Homepage** — Exibido a todos os visitantes
+    - **Resultados de Pesquisa** — Classificação mais alta na pesquisa
+    - **Páginas de Categoria** — Destaque em áreas de especialidade
+    - **Motor de Recomendações** — Priorizado em sugestões
 
-- **Secção de Destaque da Homepage** - Apresentado a todos os visitantes
-- **Resultados de Pesquisa** - Ranking mais alto nas pesquisas
-- **Páginas de Categoria** - Destaque em áreas de especialidade
-- **Motor de Recomendações** - Priorizado nas sugestões
+  </Accordion>
+  <Accordion title="Distintivo Top Expert">
+    Um distintivo distintivo no seu perfil:
+
+    - Credibilidade instantânea com pacientes
+    - Visível nos resultados de pesquisa
+    - Exibido na confirmação de marcação
+    - Partilhado nas comunicações com pacientes
+
+  </Accordion>
+  <Accordion title="Correspondência Prioritária de Pacientes">
+    Quando os pacientes usam o nosso serviço de correspondência:
+
+    - Top Experts mostrados primeiro
+    - Pontuações de correspondência mais altas
+    - Destaque em recomendações
+
+  </Accordion>
+</Accordions>
 
 <Callout type="info">
-  O posicionamento destacado pode aumentar significativamente a sua taxa de marcações. Os Top Experts tipicamente veem 2-3x mais visualizações de perfil do que os Especialistas da Comunidade.
+  O destaque pode aumentar significativamente a sua taxa de marcações. Top Experts tipicamente veem
+  2-3x mais visualizações de perfil do que Community Experts.
 </Callout>
-
-### Distintivo Top Expert
-
-Um distintivo distinto no seu perfil:
-
-- Credibilidade instantânea com pacientes
-- Visível nos resultados de pesquisa
-- Exibido na confirmação de marcação
-- Partilhado nas comunicações com pacientes
-
-### Prioridade no Matching de Pacientes
-
-Quando os pacientes usam o nosso serviço de matching:
-
-- Top Experts mostrados primeiro
-- Pontuações de match mais altas
-- Destaque nas recomendações
 
 ## Acesso a Funcionalidades
 
-### Serviços Ilimitados
+<Tabs items={['Serviços', 'Analytics', 'Personalização']}>
+  <Tab value="Serviços">
+    **Serviços Ilimitados**
 
-| Nível | Limite de Serviços |
-|-------|-------------------|
-| Comunidade | Até 5 serviços |
-| Top Expert | Ilimitado |
+    | Nível | Limite de Serviços |
+    |-------|-------------------|
+    | Community | Até 5 serviços |
+    | Top Expert | Ilimitados |
 
-Crie tantas ofertas de serviço quanto a sua prática precisar.
+    Crie tantas ofertas de serviço quanto a sua prática precisar.
 
-### Análises Avançadas
+  </Tab>
+  <Tab value="Analytics">
+    **Analytics Avançado**
 
-Insights mais profundos sobre a sua prática:
+    Insights mais profundos sobre a sua prática:
 
-- **Demografia de Pacientes** - Compreenda quem está a marcar
-- **Tendências de Marcação** - Picos de horários e épocas
-- **Previsão de Receita** - Projete ganhos futuros
-- **Taxas de Conversão** - Visualizações de perfil para marcações
-- **Benchmarks Comparativos** - Como se compara aos pares
+    - **Demografia de Pacientes** — Compreenda quem está a marcar
+    - **Tendências de Marcação** — Horários de pico e sazonalidade
+    - **Previsão de Receitas** — Projete ganhos futuros
+    - **Taxas de Conversão** — Visualizações de perfil para marcações
+    - **Benchmarks Comparativos** — Como se compara aos pares
 
-### Branding Personalizado
+  </Tab>
+  <Tab value="Personalização">
+    **Branding Personalizado**
 
-Personalize a sua presença:
+    Personalize a sua presença:
 
-- Cores de perfil personalizadas
-- Página de marcação com marca
-- Mensagens de boas-vindas personalizadas
-- Descrições de serviços personalizadas
+    - Cores de perfil personalizadas
+    - Página de marcação com marca
+    - Mensagens de boas-vindas personalizadas
+    - Descrições de serviço customizadas
 
-### Mensagens Diretas
-
-Comunicação melhorada:
-
-- Pedidos de informação pré-marcação de pacientes
-- Funcionalidade de chat direto
-- Entrega de mensagens prioritária
+  </Tab>
+</Tabs>
 
 ## Benefícios de Suporte
 
-### Suporte Prioritário
-
-Passe à frente da fila:
-
-- **Tempo de Resposta**: Dentro de 4 horas (vs. 24 horas)
-- **Canal Dedicado**: expert-priority@eleva.care
-- **Suporte Telefónico**: Disponível para questões urgentes
-
-### Gestor de Conta
-
-Para Top Experts de alto volume:
-
-- Ponto de contacto dedicado
-- Revisões de negócio trimestrais
-- Estratégias de crescimento personalizadas
+| Funcionalidade | Community | Top Expert |
+|----------------|-----------|------------|
+| Tempo de Resposta | Em 24 horas | Em 4 horas |
+| Email | expert-support@eleva.care | expert-priority@eleva.care |
+| Suporte Telefónico | Não disponível | Disponível para urgências |
+| Gestor de Conta | Não disponível | Para especialistas de alto volume |
 
 ## Em Breve
 
-### Sessões de Grupo
-
-Organize consultas de grupo:
-
-- Consultas estilo webinar
-- Múltiplos pacientes por sessão
-- Maior potencial de ganhos
-
-### Ofertas de Pacotes
-
-Venda pacotes de consultas:
-
-- Agrupe múltiplas sessões
-- Ofereça descontos de pacote
-- Melhore a retenção de pacientes
-
-### Acesso API
-
-Para Top Experts empresariais:
-
-- Integre com os seus sistemas
-- Fluxos de marcação personalizados
-- Agendamento automatizado
+<Cards>
+  <Card title="Sessões de Grupo" href="#">
+    Organize consultas estilo webinar com múltiplos pacientes por sessão para maior potencial de
+    ganhos.
+  </Card>
+  <Card title="Ofertas de Pacotes" href="#">
+    Venda pacotes de consultas com descontos para melhorar a retenção de pacientes.
+  </Card>
+  <Card title="Acesso API" href="#">
+    Integre com os seus sistemas, crie fluxos de marcação personalizados e automatize agendamento.
+  </Card>
+</Cards>
 
 ## Comparação de Valor
 
 ### ROI do Estatuto Top Expert
 
-Considere um cenário típico:
-
-**Atividade Mensal:**
+**Exemplo de Atividade Mensal:**
 - 40 consultas
-- Média de €100 por consulta
-- €4.000 receita bruta
+- Média €100 por consulta
+- €4,000 receita bruta
 
 **Comparação de Ganhos (Planos de Subscrição):**
 
 | Nível | Taxa | Taxas Mensais | Ganhos Líquidos |
 |-------|------|---------------|-----------------|
-| Comunidade | 12% | €480 | €3.520 |
-| Top Expert | 8% | €320 | €3.680 |
+| Community | 12% | €480 | €3,520 |
+| Top Expert | 8% | €320 | €3,680 |
 
 **Benefício Mensal: €160**
 
-Mais:
-- Mais marcações do posicionamento destacado
+Mais benefícios indiretos:
+- Mais marcações do destaque
 - Acesso mais rápido aos ganhos
 - Melhores ferramentas para fazer crescer a prática
 
@@ -179,33 +169,20 @@ O estatuto Top Expert é conquistado, não comprado.
 
 ### Resumo de Requisitos
 
-- ⭐ 4.8+ avaliação média
-- 📅 25+ consultas por trimestre
-- ✅ Menos de 5% taxa de cancelamento
-- 💬 90%+ taxa de resposta
-- 📆 3+ meses como Especialista da Comunidade
-- 🗓️ 80%+ consistência de disponibilidade
+| Critério | Alvo |
+|----------|------|
+| Avaliação Média | 4.8+ estrelas |
+| Consultas (90 dias) | 25+ concluídas |
+| Taxa de Cancelamento | Menos de 5% |
+| Taxa de Resposta | 90%+ em 24h |
+| Experiência | 3+ meses ativo |
+| Disponibilidade | 80%+ dias ativos |
 
-### Calendário de Avaliações
+### Calendário de Avaliação
 
-Avaliações trimestrais:
-- 1 de Janeiro, 1 de Abril, 1 de Julho, 1 de Outubro
+Avaliações trimestrais: 1 de Janeiro, 1 de Abril, 1 de Julho, 1 de Outubro
 
-[Ver requisitos completos →](/docs/expert/top-expert/requirements)
-
-## Histórias de Sucesso
-
-### Dra. Maria Santos, FT, PhD
-
-> "Tornar-me Top Expert transformou a minha prática. O posicionamento destacado trouxe 3x mais pacientes, e as taxas mais baixas significaram que fiquei com mais dos meus ganhos. Foi incrível."
-
-### Dr. João Rodrigues, OB-GYN
-
-> "As análises avançadas ajudaram-me a compreender quando os pacientes tinham mais probabilidade de marcar. Ajustei a minha disponibilidade e vi um aumento de 40% nas consultas."
-
-## Comece a Sua Jornada
-
-Pronto para trabalhar para o estatuto Top Expert?
+---
 
 <Cards>
   <Card title="Ver Requisitos" href="/docs/expert/top-expert/requirements">
@@ -218,4 +195,3 @@ Pronto para trabalhar para o estatuto Top Expert?
     Maximize marcações
   </Card>
 </Cards>
-
