--- a/src/content/docs/expert/pt/top-expert/requirements.mdx
+++ b/src/content/docs/expert/pt/top-expert/requirements.mdx
@@ -1,6 +1,6 @@
 ---
 title: Requisitos Top Expert
-description: O que é preciso para ganhar e manter o estatuto Top Expert na Eleva Care.
+description: O que é necessário para ganhar e manter o estatuto Top Expert na Eleva Care.
 ---
 
 # Requisitos Top Expert
@@ -9,231 +9,247 @@ O estatuto Top Expert é conquistado através de excelência consistente. Como o
 
 ## Visão Geral
 
-Top Expert não é comprado—é conquistado através de:
+O Top Expert é **conquistado, não comprado**. A qualificação baseia-se em:
 
 - Alta satisfação dos pacientes
 - Disponibilidade consistente
-- Prestação de serviço fiável
+- Entrega de serviço fiável
 - Comunicação profissional
 
 ## Critérios de Qualificação
 
 Deve cumprir **todos** os seguintes critérios:
 
-### 1. Requisito de Avaliação
+<Accordions>
+  <Accordion title="Requisito de Avaliação">
+    **Mínimo 4.8 de 5.0 estrelas de avaliação média**
 
-**Mínimo de 4.8 de 5.0 estrelas de avaliação média**
+    - Calculado de todas as avaliações no período de avaliação
+    - Respostas a avaliações não afetam a classificação
+    - Todas as avaliações têm peso igual
 
-- Calculado de todas as avaliações no período de avaliação
-- Respostas a avaliações não afetam a classificação
-- Todas as avaliações são ponderadas igualmente
+  </Accordion>
+  <Accordion title="Volume de Consultas">
+    **Mínimo 25 consultas concluídas** nos últimos 90 dias
 
-### 2. Volume de Consultas
+    - Consultas canceladas não contam
+    - Não comparências de pacientes contam como concluídas
+    - Tanto consultas novas como de seguimento contam
 
-**Mínimo de 25 consultas concluídas** nos últimos 90 dias
+  </Accordion>
+  <Accordion title="Taxa de Cancelamento">
+    **Menos de 5% de taxa de cancelamento**
 
-- Consultas canceladas não contam
-- Não comparências de pacientes contam como concluídas
-- Tanto consultas novas como de seguimento contam
+    - Medido nos últimos 90 dias
+    - Apenas cancelamentos iniciados pelo especialista contam
+    - Cancelamentos de pacientes não afetam a sua taxa
 
-### 3. Taxa de Cancelamento
+  </Accordion>
+  <Accordion title="Taxa de Resposta">
+    **90% ou superior de taxa de resposta** em 24 horas
 
-**Menos de 5% de taxa de cancelamento**
+    - Responder a inquéritos de marcação
+    - Responder a mensagens de pacientes
+    - Confirmar marcações de consultas
 
-- Medida nos últimos 90 dias
-- Apenas cancelamentos iniciados pelo especialista contam
-- Cancelamentos de pacientes não afetam a sua taxa
+  </Accordion>
+  <Accordion title="Requisito de Experiência">
+    **Mínimo 3 meses** como Community Expert ativo
 
-Cálculo:
-```
-Taxa de Cancelamento = Cancelamentos do Especialista / Total de Marcações × 100
-```
+    - O perfil deve estar publicado
+    - Ativo significa aceitar marcações
+    - Pausas não reiniciam o contador
 
-### 4. Taxa de Resposta
+  </Accordion>
+  <Accordion title="Consistência de Disponibilidade">
+    **Ativo 80% ou mais** dos dias no período de avaliação
 
-**90% ou superior de taxa de resposta** dentro de 24 horas
+    - Dias com horários disponíveis contam
+    - Não requer marcações cada dia
+    - Bloqueios de férias pré-marcados não o penalizam
 
-- Responder a pedidos de marcação
-- Responder a mensagens de pacientes
-- Confirmar marcações de consultas
+  </Accordion>
+</Accordions>
 
-### 5. Requisito de Experiência
+## Resumo
 
-**Mínimo de 3 meses** como Especialista da Comunidade ativo
-
-- O perfil deve estar publicado
-- Ativo significa aceitar marcações
-- Pausas não reiniciam o relógio
-
-### 6. Consistência de Disponibilidade
-
-**Ativo 80% ou mais** dos dias no período de avaliação
-
-- Dias com intervalos de tempo disponíveis
-- Não requer marcações todos os dias
-- Bloqueios de férias não o penalizam (se marcados com antecedência)
+| Métrica | Requisito |
+|---------|-----------|
+| Avaliação Média | 4.8+ estrelas |
+| Consultas (90 dias) | 25+ concluídas |
+| Taxa de Cancelamento | Menos de 5% |
+| Taxa de Resposta | 90%+ em 24h |
+| Experiência | 3+ meses ativo |
+| Disponibilidade | 80%+ dias ativos |
 
 ## Processo de Avaliação
 
-### Quando É Avaliado?
+<Steps>
+  <Step>
+    ### Avaliação Trimestral
 
-As avaliações ocorrem **trimestralmente**:
+    As avaliações ocorrem a 1 de Janeiro, 1 de Abril, 1 de Julho e 1 de Outubro.
 
-- 1 de Janeiro
-- 1 de Abril
-- 1 de Julho
-- 1 de Outubro
+  </Step>
+  <Step>
+    ### Janela de 90 Dias
 
-### Janela de Avaliação
+    Cada avaliação analisa os 90 dias anteriores de atividade.
 
-Cada avaliação olha para os **90 dias anteriores**:
+  </Step>
+  <Step>
+    ### Revisão Automática
 
-- Avaliação de Outubro olha para Julho-Setembro
-- Avaliação de Janeiro olha para Outubro-Dezembro
-- E assim por diante...
+    O sistema avalia automaticamente todos os especialistas elegíveis. Não é necessária candidatura.
 
-### Avaliação Automática
+  </Step>
+  <Step>
+    ### Notificação de Resultados
 
-O sistema avalia automaticamente todos os especialistas elegíveis. Não é necessária candidatura—apenas cumpra os critérios.
+    Em 48 horas: notificação por email, atualização do dashboard e distintivo aparece (se
+    qualificado).
 
-### Notificação de Resultados
+  </Step>
+</Steps>
 
-Dentro de 48 horas da avaliação:
+## Manter o Estatuto
 
-- Notificação por email dos resultados
-- Atualização do painel
-- Distintivo aparece no perfil (se qualificado)
+<Tabs items={['Contínuo', 'Período de Graça', 'Pausas']}>
+  <Tab value="Contínuo">
+    **Requisitos Contínuos**
 
-## Manter o Estatuto Top Expert
+    Uma vez qualificado, deve continuar a cumprir os critérios:
 
-### Requisitos Contínuos
+    - Reavaliação trimestral
+    - Mesmos requisitos cada trimestre
+    - Um trimestre de "graça" se falhar ligeiramente
 
-Uma vez qualificado, deve continuar a cumprir os critérios:
+  </Tab>
+  <Tab value="Período de Graça">
+    **Período de Graça**
 
-- Reavaliação trimestral
-- Mesmos requisitos cada trimestre
-- Um trimestre de "graça" se falhar ligeiramente
+    Se falhar marginalmente os critérios:
 
-### Período de Graça
+    - Período de aviso de um mês
+    - Oportunidade de melhorar métricas
+    - Despromoção total se não melhorar
 
-Se falhar por pouco os critérios:
+    <Callout type="warning">
+      Violações significativas (ex: 15% taxa de cancelamento, 3.5 estrelas) resultam em perda
+      imediata de estatuto sem período de graça.
+    </Callout>
 
-- Período de aviso de um mês
-- Oportunidade de melhorar métricas
-- Despromoção total se não melhorado
+  </Tab>
+  <Tab value="Pausas">
+    **Pausas Voluntárias**
 
-<Callout type="warning">
-  Violações significativas (ex: 15% taxa de cancelamento, 3.5 estrelas de avaliação) resultam em perda imediata de estatuto sem período de graça.
-</Callout>
+    A tirar férias?
 
-### Pausas Voluntárias
+    1. Marque férias com antecedência
+    2. Notifique o suporte se pausa prolongada
+    3. Estatuto preservado até 30 dias
+    4. Pausas mais longas requerem requalificação
 
-A tirar tempo de folga?
-
-1. Marque férias com antecedência
-2. Notifique o suporte se pausa prolongada
-3. Estatuto preservado até 30 dias
-4. Pausas mais longas requerem requalificação
+  </Tab>
+</Tabs>
 
 ## Acompanhar o Seu Progresso
 
-### Painel de Métricas
+### Dashboard de Métricas
 
-Monitorize o seu progresso:
+Monitorize o seu progresso em **Dashboard de Especialista** → **Desempenho**:
 
-1. Vá a **Painel do Especialista** > **Desempenho**
-2. Veja métricas atuais
-3. Veja tendências ao longo do tempo
-4. Identifique áreas para melhoria
+| Métrica | Sua Pontuação | Alvo |
+|---------|---------------|------|
+| Avaliação Média | — | 4.8+ |
+| Consultas (90 dias) | — | 25+ |
+| Taxa de Cancelamento | — | Menos de 5% |
+| Taxa de Resposta | — | 90%+ |
 
-### Exibição de Métricas Principais
-
-| Métrica | A Sua Pontuação | Alvo |
-|---------|----------------|------|
-| Avaliação Média | 4.7 ⭐ | 4.8+ |
-| Consultas (90 dias) | 22 | 25+ |
-| Taxa de Cancelamento | 3% | Abaixo de 5% |
-| Taxa de Resposta | 95% | 90%+ |
-
-### Sugestões de Melhoria
-
-O painel fornece dicas personalizadas:
-
-- "Mais 3 consultas necessárias este trimestre"
-- "Taxa de resposta melhorou! Continue assim"
-- "Considere adicionar mais disponibilidade aos fins de semana"
+O dashboard fornece sugestões personalizadas de melhoria baseadas nas suas métricas atuais.
 
 ## Desqualificação
 
-### Desqualificação Automática
+<Tabs items={['Automática', 'Recursos']}>
+  <Tab value="Automática">
+    **Desqualificação Automática**
 
-Perda imediata de estatuto por:
+    Perda imediata de estatuto por:
 
-- Violações de segurança do paciente
-- Violações de políticas
-- Queixas verificadas
-- Atividade fraudulenta
+    - Violações de segurança do paciente
+    - Violações de políticas
+    - Reclamações verificadas
+    - Atividade fraudulenta
 
-### Processo de Recurso
+  </Tab>
+  <Tab value="Recursos">
+    **Processo de Recurso**
 
-Se acredita que uma avaliação foi incorreta:
+    Se acredita que uma avaliação estava incorreta:
 
-1. Contacte expert-support@eleva.care
-2. Forneça documentação
-3. Revisão concluída em 5 dias úteis
-4. Decisão é final
+    1. Contacte expert-support@eleva.care
+    2. Forneça documentação
+    3. Revisão concluída em 5 dias úteis
+    4. A decisão é final
+
+  </Tab>
+</Tabs>
 
 ## Dicas para Sucesso
 
-### Maximize a Sua Avaliação
+<Accordions>
+  <Accordion title="Maximizar a Sua Avaliação">
+    - Forneça cuidados excecionais
+    - Comunique claramente
+    - Faça seguimento após consultas
+    - Peça a pacientes satisfeitos para deixar avaliações
 
-- Forneça cuidados excecionais
-- Comunique claramente
-- Faça seguimento após consultas
-- Peça a pacientes satisfeitos para deixar avaliações
+  </Accordion>
+  <Accordion title="Manter Consistência">
+    - Defina disponibilidade realista
+    - Honre todas as consultas
+    - Responda prontamente a mensagens
+    - Atualize o calendário regularmente
 
-### Mantenha Consistência
+  </Accordion>
+  <Accordion title="Evitar Cancelamentos">
+    - Aceite apenas consultas que pode manter
+    - Construa tempo de buffer
+    - Planeie férias com antecedência
+    - Tenha planos de contingência
 
-- Defina disponibilidade realista
-- Honre todas as consultas
-- Responda prontamente a mensagens
-- Atualize o calendário regularmente
+  </Accordion>
+</Accordions>
 
-### Evite Cancelamentos
+## Perguntas Frequentes
 
-- Aceite apenas consultas que pode cumprir
-- Construa tempo de buffer
-- Planeie férias com antecedência
-- Tenha planos de contingência
+<Accordions>
+  <Accordion title="Posso comprar o estatuto Top Expert?">
+    Não. O estatuto Top Expert é conquistado exclusivamente através do cumprimento de critérios de
+    desempenho.
 
-## FAQ
+  </Accordion>
+  <Accordion title="E se estiver perto mas não qualificar?">
+    Continue a trabalhar nas suas métricas. Será avaliado novamente no próximo trimestre.
 
-### Posso comprar o estatuto Top Expert?
+  </Accordion>
+  <Accordion title="O meu plano de subscrição afeta a elegibilidade?">
+    Não. Tanto especialistas só-comissão como de subscrição são avaliados igualmente.
 
-Não. O estatuto Top Expert é conquistado exclusivamente através do cumprimento de critérios de desempenho.
+  </Accordion>
+  <Accordion title="Posso perder o estatuto a meio do trimestre?">
+    Apenas por violações graves. As métricas regulares são avaliadas trimestralmente.
 
-### E se estiver perto mas não qualificar?
+  </Accordion>
+</Accordions>
 
-Continue a trabalhar nas suas métricas. Será avaliado novamente no próximo trimestre.
-
-### O meu plano de subscrição afeta a elegibilidade?
-
-Não. Tanto especialistas de apenas comissão como de subscrição são avaliados igualmente.
-
-### Posso perder o estatuto a meio do trimestre?
-
-Apenas por violações graves. Métricas regulares são avaliadas trimestralmente.
-
-## Pronto para Qualificar?
-
-Comece a focar-se nestas métricas hoje:
+---
 
 <Cards>
-  <Card title="Construa a Sua Prática" href="/docs/expert/getting-started/services">
-    Crie serviços que atraiam pacientes
-  </Card>
   <Card title="Benefícios Top Expert" href="/docs/expert/top-expert/benefits">
     Veja o que vai desbloquear
   </Card>
+  <Card title="Construir a Sua Prática" href="/docs/expert/getting-started/services">
+    Crie serviços que atraem pacientes
+  </Card>
 </Cards>
-
