--- a/src/content/docs/workspace/en/getting-started/setup.mdx
+++ b/src/content/docs/workspace/en/getting-started/setup.mdx
@@ -7,108 +7,122 @@ description: Complete guide to setting up your workspace on Eleva Care platform.
 
 This guide walks you through the complete setup process for your workspace on Eleva Care—whether you're a medical practice, wellness center, employer, or healthcare institution.
 
-## Step 1: Apply for Partnership
+## Setup Process
 
-Before you can set up your workspace, you need to apply for partnership:
+<Steps>
+  <Step>
+    ### Apply for Partnership
 
-1. Visit [eleva.care/contact?partner=true](https://eleva.care/contact?partner=true)
-2. Fill out the partnership application form
-3. Provide your credentials and services
-4. Our team will review your application (typically 5 business days)
+    Before you can set up your workspace, apply for partnership:
 
-<Callout type="info">
-  **Approval Requirements**: We review your credentials, services offered, and alignment with our women's health mission.
-</Callout>
+    1. Visit [eleva.care/contact?partner=true](https://eleva.care/contact?partner=true)
+    2. Fill out the partnership application form
+    3. Provide your credentials and services
+    4. Our team reviews your application (typically 5 business days)
 
-## Step 2: Create Your Workspace Profile
+    <Callout type="info">
+      **Approval Requirements**: We review your credentials, services offered, and alignment with
+      our women's health mission.
+    </Callout>
 
-Once approved, you'll have access to the Partner Dashboard:
+  </Step>
+  <Step>
+    ### Create Your Workspace Profile
 
-### Basic Information
+    Once approved, access the Partner Dashboard to set up your profile.
 
-- **Workspace Name**: Your practice or business name (e.g., "Dr. Patricia's Wellness Center")
-- **Description**: A compelling description of your services (up to 500 characters)
-- **Logo**: High-resolution logo (recommended: 400x400px, PNG or SVG)
-- **Cover Image**: Banner image for your profile (recommended: 1200x400px)
+    **Basic Information:**
+    - **Workspace Name**: Your practice or business name
+    - **Description**: A compelling description (up to 500 characters)
+    - **Logo**: High-resolution logo (400x400px, PNG or SVG)
+    - **Cover Image**: Banner image (1200x400px)
 
-### Contact Information
+    **Contact Information:**
+    - Business email, phone, website, and address
 
-- **Business Email**: Primary contact for partnership communications
-- **Phone Number**: Business phone (optional)
-- **Website**: Your website URL
-- **Address**: Physical location (if applicable)
+    **Service Categories:**
+    - Women's Health & OB/GYN
+    - Mental Health & Therapy
+    - Nutrition & Dietetics
+    - Fitness & Physical Therapy
+    - Wellness Coaching
 
-### Service Categories
+  </Step>
+  <Step>
+    ### Configure Settings
 
-Select the healthcare categories your workspace covers:
+    Set up your booking and payment preferences.
 
-- Women's Health & OB/GYN
-- Mental Health & Therapy
-- Nutrition & Dietetics
-- Fitness & Physical Therapy
-- Wellness Coaching
-- Other specialties
+    <Tabs items={['Booking Settings', 'Payment Settings']}>
+      <Tab value="Booking Settings">
+        - **Cancellation Policy**: Set terms (24h, 48h, etc.)
+        - **Buffer Time**: Time between appointments
+        - **Booking Window**: How far in advance clients can book
+        - **Minimum Notice**: Minimum time before an appointment
 
-## Step 3: Configure Settings
+      </Tab>
+      <Tab value="Payment Settings">
+        - **Connect Stripe**: Link your Stripe account for receiving payments
+        - **Currency**: Set your preferred currency (EUR, USD, etc.)
+        - **Payout Schedule**: Choose weekly or monthly payouts
 
-### Booking Settings
+      </Tab>
+    </Tabs>
 
-- **Cancellation Policy**: Set your cancellation terms (24h, 48h, etc.)
-- **Buffer Time**: Time between appointments (15, 30, 60 minutes)
-- **Booking Window**: How far in advance clients can book
-- **Minimum Notice**: Minimum time before an appointment can be booked
+    <Callout type="warning">
+      **Important**: You must connect a Stripe account before your experts can receive payouts.
+    </Callout>
 
-### Payment Settings
+  </Step>
+  <Step>
+    ### Set Your Marketing Fee
 
-1. **Connect Stripe**: Link your Stripe account for receiving payments
-2. **Currency**: Set your preferred currency (EUR, USD, etc.)
-3. **Payout Schedule**: Choose weekly or monthly payouts
+    As a workspace owner, you earn a marketing fee from each booking:
 
-<Callout type="warning">
-  **Important**: You must connect a Stripe account before your experts can receive payouts.
-</Callout>
+    | Workspace Tier | Marketing Fee | Expert Minimum |
+    |----------------|---------------|----------------|
+    | Basic | 10-15% | 70% |
+    | Standard | 15-20% | 65% |
+    | Premium | 20-25% | 60% |
 
-## Step 4: Set Your Marketing Fee
+    **Example**: For a €100 booking with 15% workspace fee:
+    - Eleva Platform: €8-12 (8-12%)
+    - Your Workspace: €15 (15%)
+    - Expert: €73-77 (73-77%)
 
-As a workspace owner, you earn a marketing fee from each booking made through your experts:
+    [Learn more about revenue sharing →](/docs/workspace/pricing/revenue)
 
-| Workspace Tier | Marketing Fee | Expert Minimum |
-|----------------|---------------|----------------|
-| Basic | 10-15% | 70% |
-| Standard | 15-20% | 65% |
-| Premium | 20-25% | 60% |
+  </Step>
+  <Step>
+    ### Invite Your Team
 
-**Example**: For a $100 booking with 15% workspace fee:
-- Eleva Platform: $8-12 (8-12%)
-- Your Workspace: $15 (15%)
-- Expert: $73-77 (73-77%)
+    Once your workspace is set up, invite your healthcare professionals:
 
-[Learn more about revenue sharing →](/docs/workspace/pricing/revenue)
+    1. Go to **Team Management** in your dashboard
+    2. Click **Invite Expert**
+    3. Enter the expert's email address
+    4. They'll receive an invitation to join your workspace
 
-## Step 5: Invite Your Team
+    [Learn about team management →](/docs/workspace/team/experts)
 
-Once your workspace is set up, invite your healthcare professionals:
+  </Step>
+  <Step>
+    ### Go Live
 
-1. Go to **Team Management** in your dashboard
-2. Click **Invite Expert**
-3. Enter the expert's email address
-4. They'll receive an invitation to join your workspace
+    Before publishing your workspace, verify:
 
-[Learn about team management →](/docs/workspace/team/experts)
+    - Workspace profile is complete
+    - Stripe account is connected
+    - Marketing fee is configured
+    - At least one expert has joined
+    - Expert profiles are complete and published
 
-## Step 6: Go Live
+    Click **Publish Workspace** to make your workspace visible to patients!
 
-Before publishing your workspace:
+  </Step>
+</Steps>
 
-- [ ] Workspace profile is complete
-- [ ] Stripe account is connected
-- [ ] Marketing fee is configured
-- [ ] At least one expert has joined
-- [ ] Expert profiles are complete and published
-
-Click **Publish Workspace** to make your workspace visible to patients!
-
-## Next Steps
+---
 
 <Cards>
   <Card title="Customize Branding" href="/docs/workspace/getting-started/branding">
