--- a/src/content/docs/workspace/en/index.mdx
+++ b/src/content/docs/workspace/en/index.mdx
@@ -5,7 +5,7 @@ description: Create and manage your workspace on Eleva Care. Set up your team, a
 
 # Welcome to Workspace Portal
 
-Eleva Care empowers healthcare organizations—clinics, wellness centers, employers, and health institutions—to deliver digital health services through our proven platform technology. This resource center will help you set up and manage your workspace effectively.
+Eleva Care empowers healthcare organizations—clinics, wellness centers, employers, and health institutions—to deliver digital health services through our proven platform technology.
 
 ## What is a Workspace?
 
@@ -21,10 +21,12 @@ Whether you're running a physical clinic, an online practice, or a hybrid model,
 
 <Cards>
   <Card title="Ready-to-Use Technology" href="/docs/workspace/getting-started/setup">
-    Skip the build phase. Our proven platform includes scheduling, video consultations, payments, and client management.
+    Skip the build phase. Our proven platform includes scheduling, video consultations, payments,
+    and client management.
   </Card>
   <Card title="Access Expert Network" href="/docs/workspace/team/experts">
-    Offer your clients access to our network of independent, licensed healthcare professionals, or onboard your own team.
+    Offer your clients access to our network of independent, licensed healthcare professionals, or
+    onboard your own team.
   </Card>
   <Card title="Flexible Business Model" href="/docs/workspace/pricing/revenue">
     Workspace subscriptions with transparent pricing. Scale up or down based on your needs.
@@ -33,77 +35,104 @@ Whether you're running a physical clinic, an online practice, or a hybrid model,
 
 ## How It Works
 
-### For Your Workspace
+<Steps>
+  <Step>
+    ### Apply & Get Approved
 
-1. **Apply & Get Approved** - Submit your partnership application (5 business days)
-2. **Set Up Your Workspace** - Create your workspace profile with branding and services
-3. **Onboard Your Experts** - Invite healthcare professionals to join your team
-4. **Launch & Grow** - Start receiving bookings and track performance
+    Submit your partnership application. Our team reviews credentials within 5 business days.
 
-### What We Provide
+  </Step>
+  <Step>
+    ### Set Up Your Workspace
 
-- ✅ Booking and scheduling system
-- ✅ Secure video consultation platform
-- ✅ Payment processing with automatic payouts
-- ✅ Client management tools
-- ✅ Enterprise analytics dashboard
-- ✅ Dedicated partner support
+    Create your workspace profile with branding, services, and team information.
 
-### What You Provide
+  </Step>
+  <Step>
+    ### Onboard Your Experts
 
-- ✅ Your team of healthcare professionals
-- ✅ Patient acquisition and marketing
-- ✅ Brand and reputation building
-- ✅ Administrative support for your experts
+    Invite healthcare professionals to join your team.
+
+  </Step>
+  <Step>
+    ### Launch & Grow
+
+    Start receiving bookings and track performance with analytics.
+
+  </Step>
+</Steps>
+
+<Tabs items={['What We Provide', 'What You Provide']}>
+  <Tab value="What We Provide">
+    - Booking and scheduling system
+    - Secure video consultation platform
+    - Payment processing with automatic payouts
+    - Client management tools
+    - Enterprise analytics dashboard
+    - Dedicated partner support
+
+  </Tab>
+  <Tab value="What You Provide">
+    - Your team of healthcare professionals
+    - Patient acquisition and marketing
+    - Brand and reputation building
+    - Administrative support for your experts
+
+  </Tab>
+</Tabs>
 
 <Callout type="info">
-  **Partnership Model**: Eleva Care provides the technology platform. Your workspace manages the healthcare services through your team of independent professionals.
+  **Partnership Model**: Eleva Care provides the technology platform. Your workspace manages the
+  healthcare services through your team of independent professionals.
 </Callout>
 
 ## Who Can Create a Workspace?
 
 <Cards>
   <Card title="Medical Practices" href="/docs/workspace/getting-started/setup">
-    OB/GYN clinics, women's health centers, primary care practices, specialty groups
+    OB/GYN clinics, women's health centers, primary care practices
   </Card>
   <Card title="Wellness Centers" href="/docs/workspace/getting-started/setup">
-    Integrative health centers, holistic wellness spaces, mind-body centers
+    Integrative health centers, holistic wellness spaces
   </Card>
   <Card title="Mental Health" href="/docs/workspace/getting-started/setup">
-    Therapy practices, counseling centers, perinatal mental health specialists
+    Therapy practices, counseling centers, perinatal specialists
   </Card>
   <Card title="Employers & Institutions" href="/docs/workspace/getting-started/setup">
-    Corporate wellness programs, health benefits providers, educational institutions
+    Corporate wellness programs, educational institutions
   </Card>
 </Cards>
 
 ## Workspace Plans
 
-### Starter Plan
+<Tabs items={['Starter', 'Professional', 'Enterprise']}>
+  <Tab value="Starter">
+    **€99/month** - Perfect for small practices
 
-Perfect for small practices getting started:
-- Up to 3 expert profiles
-- Basic analytics & reporting
-- Email support
-- **€99/month**
+    - Up to 3 expert profiles
+    - Basic analytics & reporting
+    - Email support
 
-### Professional Plan
+  </Tab>
+  <Tab value="Professional">
+    **€199/month** - Ideal for growing workspaces
 
-Ideal for growing workspaces:
-- Up to 10 expert profiles
-- Advanced analytics & insights
-- Priority support
-- Custom domain integration
-- **€199/month**
+    - Up to 10 expert profiles
+    - Advanced analytics & insights
+    - Priority support
+    - Custom domain integration
 
-### Enterprise Plan
+  </Tab>
+  <Tab value="Enterprise">
+    **Custom pricing** - For large organizations
 
-For large organizations:
-- Unlimited expert profiles
-- White-label options
-- API access & webhooks
-- Dedicated account manager
-- **Custom pricing**
+    - Unlimited expert profiles
+    - White-label options
+    - API access & webhooks
+    - Dedicated account manager
+
+  </Tab>
+</Tabs>
 
 [Compare plans →](/docs/workspace/pricing/plans)
 
@@ -112,28 +141,47 @@ For large organizations:
 Our three-party revenue model ensures fair compensation for everyone:
 
 | Party | Revenue Share | Purpose |
-|-------|--------------|---------|
+|-------|---------------|---------|
 | **Patient** | Pays full amount | For healthcare services |
 | **Expert** | 60-77% minimum | Service delivery |
 | **Workspace** | 10-25% | Patient acquisition, marketing |
 | **Eleva** | 8-20% | Platform, technology, payments |
 
 <Callout type="success">
-  **Expert Protection**: Experts always receive at least 60% of the booking amount. Combined fees (platform + workspace) never exceed 40%.
+  **Expert Protection**: Experts always receive at least 60% of the booking amount. Combined fees
+  (platform + workspace) never exceed 40%.
 </Callout>
 
 [Learn about revenue sharing →](/docs/workspace/pricing/revenue)
 
 ## Getting Started Checklist
 
-Before you can start receiving bookings, complete these steps:
+<Accordions>
+  <Accordion title="1. Apply for Partnership">
+    Submit your credentials and services information for review.
 
-- [ ] **Apply for partnership** - Submit your credentials
-- [ ] **Set up workspace profile** - Add branding, services, and team info
-- [ ] **Configure pricing** - Set your marketing fee (10-25%)
-- [ ] **Invite experts** - Onboard your healthcare professionals
-- [ ] **Connect Stripe** - Set up payment processing
-- [ ] **Go live** - Publish your workspace profile
+  </Accordion>
+  <Accordion title="2. Set Up Workspace Profile">
+    Add branding, services, and team information to your workspace.
+
+  </Accordion>
+  <Accordion title="3. Configure Pricing">
+    Set your marketing fee between 10-25% of each booking.
+
+  </Accordion>
+  <Accordion title="4. Invite Experts">
+    Onboard your healthcare professionals to your workspace.
+
+  </Accordion>
+  <Accordion title="5. Connect Stripe">
+    Set up payment processing for automatic payouts.
+
+  </Accordion>
+  <Accordion title="6. Go Live">
+    Publish your workspace profile and start accepting bookings.
+
+  </Accordion>
+</Accordions>
 
 ## Quick Links
 
@@ -156,9 +204,11 @@ Before you can start receiving bookings, complete these steps:
 
 Our dedicated partner support team is here to help you succeed:
 
-- **Email**: partners@eleva.care
-- **Response Time**: Within 24 hours (priority for Professional/Enterprise)
-- **Onboarding**: Dedicated onboarding assistance included
+| Channel | Details |
+|---------|---------|
+| Email | partners@eleva.care |
+| Response Time | Within 24 hours (priority for Professional/Enterprise) |
+| Onboarding | Dedicated onboarding assistance included |
 
 <Callout type="success">
   Ready to get started? [Apply for partnership →](/contact?partner=true)
