--- a/src/content/docs/developer/en/webhooks/overview.mdx
+++ b/src/content/docs/developer/en/webhooks/overview.mdx
@@ -9,18 +9,64 @@ Webhooks allow you to receive real-time notifications when events occur in Eleva
 
 ## How Webhooks Work
 
-```
-1. Event occurs in Eleva Care (e.g., booking confirmed)
-2. Eleva Care sends HTTP POST to your webhook URL
-3. Your server processes the event
-4. You return 200 OK to acknowledge receipt
-```
+<Steps>
+  <Step>
+    ### Event Occurs
+
+    An event occurs in Eleva Care (e.g., booking confirmed).
+
+  </Step>
+  <Step>
+    ### HTTP POST Sent
+
+    Eleva Care sends an HTTP POST to your webhook URL.
+
+  </Step>
+  <Step>
+    ### Process Event
+
+    Your server processes the event data.
+
+  </Step>
+  <Step>
+    ### Acknowledge
+
+    You return 200 OK to acknowledge receipt.
+
+  </Step>
+</Steps>
 
 ## Setting Up Webhooks
 
-### 1. Create a Webhook Endpoint
+<Tabs items={['Dashboard', 'API']}>
+  <Tab value="Dashboard">
+    **Via Partner Dashboard:**
 
-Create an endpoint in your application to receive webhook events:
+    1. Go to **Settings** → **Webhooks**
+    2. Click **Add Webhook**
+    3. Enter your endpoint URL
+    4. Select events to subscribe to
+    5. Copy the signing secret
+
+  </Tab>
+  <Tab value="API">
+    **Via API:**
+
+    ```bash
+    curl -X POST "https://api.eleva.care/v1/webhooks" \
+      -H "Authorization: Bearer YOUR_API_KEY" \
+      -H "Content-Type: application/json" \
+      -d '{
+        "url": "https://yourapp.com/webhooks/eleva",
+        "events": ["booking.confirmed", "payment.succeeded"],
+        "active": true
+      }'
+    ```
+
+  </Tab>
+</Tabs>
+
+### Webhook Endpoint Example
 
 ```typescript
 // Example: Express.js
@@ -34,7 +80,7 @@ app.post('/webhooks/eleva', express.raw({ type: 'application/json' }), (req, res
   }
 
   const event = JSON.parse(payload);
-  
+
   // Process event
   switch (event.type) {
     case 'booking.confirmed':
@@ -49,57 +95,20 @@ app.post('/webhooks/eleva', express.raw({ type: 'application/json' }), (req, res
 });
 ```
 
-### 2. Register Your Webhook
-
-Register your webhook in the Partner Dashboard or via API:
-
-**Via Dashboard:**
-
-1. Go to **Settings** → **Webhooks**
-2. Click **Add Webhook**
-3. Enter your endpoint URL
-4. Select events to subscribe to
-5. Copy the signing secret
-
-**Via API:**
-
-```bash
-curl -X POST "https://api.eleva.care/v1/webhooks" \
-  -H "Authorization: Bearer YOUR_API_KEY" \
-  -H "Content-Type: application/json" \
-  -d '{
-    "url": "https://yourapp.com/webhooks/eleva",
-    "events": ["booking.confirmed", "payment.succeeded"],
-    "active": true
-  }'
-```
-
-### 3. Verify Signatures
-
-Always verify webhook signatures to ensure authenticity:
+### Signature Verification
 
 ```typescript
 import crypto from 'crypto';
 
-function verifySignature(
-  payload: string,
-  signature: string,
-  secret: string
-): boolean {
+function verifySignature(payload: string, signature: string, secret: string): boolean {
   const timestamp = signature.split(',')[0].split('=')[1];
   const receivedSignature = signature.split(',')[1].split('=')[1];
-  
+
   const signedPayload = `${timestamp}.${payload}`;
-  const expectedSignature = crypto
-    .createHmac('sha256', secret)
-    .update(signedPayload)
-    .digest('hex');
+  const expectedSignature = crypto.createHmac('sha256', secret).update(signedPayload).digest('hex');
 
   // Use timing-safe comparison
-  return crypto.timingSafeEqual(
-    Buffer.from(receivedSignature),
-    Buffer.from(expectedSignature)
-  );
+  return crypto.timingSafeEqual(Buffer.from(receivedSignature), Buffer.from(expectedSignature));
 }
 ```
 
@@ -130,77 +139,79 @@ Each webhook includes a signature header:
 X-Eleva-Signature: t=1673784600,v1=5257a869e7ecebeda32affa62cdca3fa51cad7e77a0e56ff536d0ce8e108d8bd
 ```
 
-Components:
-- `t`: Unix timestamp when the request was sent
-- `v1`: HMAC SHA-256 signature
+| Component | Description |
+|-----------|-------------|
+| `t` | Unix timestamp when the request was sent |
+| `v1` | HMAC SHA-256 signature |
 
 ## Best Practices
 
-### 1. Respond Quickly
+<Accordions>
+  <Accordion title="Respond Quickly">
+    Return a 200 response as quickly as possible. Process events asynchronously:
 
-Return a 200 response as quickly as possible. Process events asynchronously:
+    ```typescript
+    app.post('/webhooks/eleva', async (req, res) => {
+      // Immediately acknowledge receipt
+      res.status(200).json({ received: true });
 
-```typescript
-app.post('/webhooks/eleva', async (req, res) => {
-  // Immediately acknowledge receipt
-  res.status(200).json({ received: true });
-  
-  // Process asynchronously
-  processEventAsync(req.body).catch(console.error);
-});
-```
+      // Process asynchronously
+      processEventAsync(req.body).catch(console.error);
+    });
+    ```
 
-### 2. Handle Duplicates
+  </Accordion>
+  <Accordion title="Handle Duplicates">
+    Webhooks may be sent multiple times. Use the event ID for idempotency:
 
-Webhooks may be sent multiple times. Use the event ID for idempotency:
+    ```typescript
+    async function processEvent(event: WebhookEvent) {
+      // Check if already processed
+      const processed = await db.processedEvents.findOne({ eventId: event.id });
+      if (processed) {
+        return; // Skip duplicate
+      }
 
-```typescript
-async function processEvent(event: WebhookEvent) {
-  // Check if already processed
-  const processed = await db.processedEvents.findOne({ eventId: event.id });
-  if (processed) {
-    return; // Skip duplicate
-  }
-  
-  // Process event
-  await handleEvent(event);
-  
-  // Mark as processed
-  await db.processedEvents.create({ eventId: event.id });
-}
-```
+      // Process event
+      await handleEvent(event);
 
-### 3. Verify Timestamps
+      // Mark as processed
+      await db.processedEvents.create({ eventId: event.id });
+    }
+    ```
 
-Reject old webhooks to prevent replay attacks:
+  </Accordion>
+  <Accordion title="Verify Timestamps">
+    Reject old webhooks to prevent replay attacks:
 
-```typescript
-const MAX_AGE_SECONDS = 300; // 5 minutes
+    ```typescript
+    const MAX_AGE_SECONDS = 300; // 5 minutes
 
-function isTimestampValid(timestamp: number): boolean {
-  const now = Math.floor(Date.now() / 1000);
-  return Math.abs(now - timestamp) < MAX_AGE_SECONDS;
-}
-```
+    function isTimestampValid(timestamp: number): boolean {
+      const now = Math.floor(Date.now() / 1000);
+      return Math.abs(now - timestamp) < MAX_AGE_SECONDS;
+    }
+    ```
 
-### 4. Use HTTPS
+  </Accordion>
+  <Accordion title="Use HTTPS">
+    Always use HTTPS endpoints for security.
 
-Always use HTTPS endpoints for security.
+  </Accordion>
+  <Accordion title="Log Everything">
+    ```typescript
+    function logWebhook(event: WebhookEvent, status: 'success' | 'error') {
+      console.log({
+        eventId: event.id,
+        eventType: event.type,
+        status,
+        timestamp: new Date().toISOString(),
+      });
+    }
+    ```
 
-### 5. Log Everything
-
-Log all webhook events for debugging:
-
-```typescript
-function logWebhook(event: WebhookEvent, status: 'success' | 'error') {
-  console.log({
-    eventId: event.id,
-    eventType: event.type,
-    status,
-    timestamp: new Date().toISOString(),
-  });
-}
-```
+  </Accordion>
+</Accordions>
 
 ## Retry Policy
 
@@ -219,37 +230,40 @@ After 6 failed attempts, the webhook is marked as failed.
 
 ## Testing Webhooks
 
-### Webhook Logs
+<Tabs items={['Dashboard', 'API', 'Local Development']}>
+  <Tab value="Dashboard">
+    View webhook delivery logs:
 
-View webhook delivery logs:
+    **Partner Dashboard** → **Settings** → **Webhooks** → **Logs**
 
-**Partner Dashboard** → **Settings** → **Webhooks** → **Logs**
+  </Tab>
+  <Tab value="API">
+    Send test events to your endpoint:
 
-### Test Events
+    ```bash
+    curl -X POST "https://api.eleva.care/v1/webhooks/test" \
+      -H "Authorization: Bearer YOUR_API_KEY" \
+      -H "Content-Type: application/json" \
+      -d '{
+        "webhookId": "wh_abc123",
+        "eventType": "booking.confirmed"
+      }'
+    ```
 
-Send test events to your endpoint:
+  </Tab>
+  <Tab value="Local Development">
+    Use tunneling tools for local testing:
 
-```bash
-curl -X POST "https://api.eleva.care/v1/webhooks/test" \
-  -H "Authorization: Bearer YOUR_API_KEY" \
-  -H "Content-Type: application/json" \
-  -d '{
-    "webhookId": "wh_abc123",
-    "eventType": "booking.confirmed"
-  }'
-```
+    ```bash
+    # Using ngrok
+    ngrok http 3000
 
-### Local Development
+    # Register the ngrok URL as your webhook endpoint
+    # https://abc123.ngrok.io/webhooks/eleva
+    ```
 
-Use tunneling tools for local testing:
-
-```bash
-# Using ngrok
-ngrok http 3000
-
-# Register the ngrok URL as your webhook endpoint
-# https://abc123.ngrok.io/webhooks/eleva
-```
+  </Tab>
+</Tabs>
 
 ## Debugging
 
@@ -262,16 +276,16 @@ ngrok http 3000
 | Missing events | Check your event subscription |
 | Duplicate events | Implement idempotency |
 
-### Webhook Debugging Checklist
+### Debugging Checklist
 
-- [ ] Endpoint returns 200 for valid requests
-- [ ] Signature verification is correct
-- [ ] Using raw request body for signature
-- [ ] Processing events asynchronously
-- [ ] Handling duplicate events
-- [ ] Logging all events
+- Endpoint returns 200 for valid requests
+- Signature verification is correct
+- Using raw request body for signature
+- Processing events asynchronously
+- Handling duplicate events
+- Logging all events
 
-## Next Steps
+---
 
 <Cards>
   <Card title="Webhook Events" href="/docs/developer/webhooks/events">
@@ -281,5 +295,3 @@ ngrok http 3000
     Learn about third-party integrations
   </Card>
 </Cards>
-
-
