--- a/src/content/docs/expert/pt/earnings/payouts.mdx
+++ b/src/content/docs/expert/pt/earnings/payouts.mdx
@@ -1,76 +1,116 @@
 ---
-title: Pagamentos & Ganhos
-description: Compreenda como é pago, taxas de plataforma e gestão dos seus ganhos.
+title: Pagamentos e Ganhos
+description: Compreenda como é pago, taxas da plataforma e gestão dos seus ganhos.
 ---
 
-# Pagamentos & Ganhos
+# Pagamentos e Ganhos
 
-A Eleva Care usa o Stripe Connect para pagamentos seguros e automatizados. Este guia explica como funcionam os ganhos e como maximizar o seu rendimento.
+A Eleva Care usa o Stripe Connect para pagamentos seguros e automatizados. Este guia explica como funcionam os ganhos e como maximizar os seus rendimentos.
 
 ## Como Funcionam os Pagamentos
 
-### Fluxo de Pagamento
+<Steps>
+  <Step>
+    ### Paciente Marca
 
-1. **Paciente Marca** - Pagamento é cobrado na marcação
-2. **Fundos Retidos** - Pagamento retido em garantia durante a consulta
-3. **Consulta Concluída** - Fundos libertados 24 horas depois
-4. **Pagamento Processado** - Fundos transferidos para a sua conta bancária
+    O pagamento é cobrado no momento da marcação.
 
-```
-Paciente Paga → Retenção em Garantia → Consulta → Retenção 24h → Sua Conta Bancária
-```
+  </Step>
+  <Step>
+    ### Fundos Retidos
+
+    O pagamento é retido em custódia durante o período da consulta.
+
+  </Step>
+  <Step>
+    ### Consulta Concluída
+
+    Os fundos são libertados 24 horas após a conclusão da consulta.
+
+  </Step>
+  <Step>
+    ### Pagamento Processado
+
+    Os fundos são transferidos para a sua conta bancária no seu calendário de pagamentos.
+
+  </Step>
+</Steps>
 
 <Callout type="info">
   A retenção de 24 horas após a consulta permite resolver quaisquer disputas ou problemas.
 </Callout>
 
-## Taxas de Plataforma
+## Taxas da Plataforma
 
 ### Estrutura de Taxas
 
-A sua taxa de plataforma depende do seu nível e plano de subscrição:
-
 | Nível | Plano | Comissão | Taxa Mensal |
 |-------|-------|----------|-------------|
-| Comunidade | Apenas Comissão | 20% | €0 |
-| Comunidade | Subscrição | 12% | €49/mês ou €490/ano |
-| Top Expert | Apenas Comissão | 15% | €0 |
-| Top Expert | Subscrição | 8% | €177/mês ou €1.774/ano |
+| Community | Só Comissão | 20% | €0 |
+| Community | Subscrição | 12% | €49/mês |
+| Top Expert | Só Comissão | 15% | €0 |
+| Top Expert | Subscrição | 8% | €177/mês |
 
-### Escolher o Seu Plano
+<Tabs items={['Só Comissão', 'Subscrição']}>
+  <Tab value="Só Comissão">
+    **Melhor Para:**
 
-**Apenas Comissão** é melhor se:
-- Está a começar
-- Tem menos de 10 marcações/mês
-- Prefere sem custos fixos
+    - Acabou de começar
+    - Menos de 10 marcações/mês
+    - Prefere sem custos fixos
+    - Testar a plataforma
 
-**Subscrição** é melhor se:
-- Tem marcações consistentes
-- Quer maximizar ganhos por consulta
-- Quer custos previsíveis
+  </Tab>
+  <Tab value="Subscrição">
+    **Melhor Para:**
 
-### Cálculos de Exemplo
+    - Marcações consistentes
+    - Quer maximizar ganhos por consulta
+    - Prefere custos previsíveis
+    - Mais de 6 marcações/mês (ponto de equilíbrio)
 
-**Consulta de €100 - Especialista da Comunidade:**
+  </Tab>
+</Tabs>
+
+### Exemplo de Cálculo
+
+**Consulta de €100 — Community Expert:**
 
 | Plano | Comissão | Você Recebe |
 |-------|----------|-------------|
-| Apenas Comissão (20%) | €20 | €80 |
+| Só Comissão (20%) | €20 | €80 |
 | Subscrição (12%) | €12 | €88 |
 
-**Ponto de Equilíbrio**: Com a subscrição de €49/mês, poupa €8 por marcação. Fica equilibrado em ~6 marcações/mês.
+**Ponto de equilíbrio**: Com subscrição de €49/mês, poupa €8 por marcação. Equilíbrio em ~6 marcações/mês.
 
 ## Configurar Pagamentos
 
-### Onboarding no Stripe Connect
+<Steps>
+  <Step>
+    ### Iniciar Configuração
 
-Para receber pagamentos, complete a configuração do Stripe Connect:
+    Vá a **Dashboard de Especialista** → **Ganhos** → **Configurar Pagamentos**.
 
-1. Vá a **Painel do Especialista** > **Ganhos**
-2. Clique em **Configurar Pagamentos**
-3. Complete a verificação de identidade do Stripe
-4. Adicione a sua conta bancária
-5. A verificação demora tipicamente 1-2 dias úteis
+  </Step>
+  <Step>
+    ### Completar Verificação
+
+    Complete o processo de verificação de identidade do Stripe.
+
+  </Step>
+  <Step>
+    ### Adicionar Conta Bancária
+
+    Forneça os detalhes da sua conta bancária para receber pagamentos.
+
+  </Step>
+  <Step>
+    ### Aguardar Aprovação
+
+    A verificação tipicamente demora 1-2 dias úteis.
+
+  </Step>
+</Steps>
 
 ### Informação Necessária
 
@@ -85,146 +125,163 @@ Para receber pagamentos, complete a configuração do Stripe Connect:
 
 ## Calendário de Pagamentos
 
-### Especialistas da Comunidade
+<Tabs items={['Community', 'Top Expert']}>
+  <Tab value="Community">
+    **Pagamentos Community Expert**
 
-- **Frequência**: Semanal (todas as segundas-feiras)
-- **Mínimo**: €10 de ganhos acumulados
-- **Processamento**: 2-3 dias úteis para chegar
+    | Detalhe | Valor |
+    |---------|-------|
+    | Frequência | Semanal (todas as segundas) |
+    | Mínimo | €10 ganhos acumulados |
+    | Processamento | 2-3 dias úteis para chegar |
 
-### Top Experts
+  </Tab>
+  <Tab value="Top Expert">
+    **Pagamentos Top Expert**
 
-- **Frequência**: Diária (disponível)
-- **Mínimo**: €10 de ganhos acumulados
-- **Processamento**: 1-2 dias úteis para chegar
+    | Detalhe | Valor |
+    |---------|-------|
+    | Frequência | Diário (disponível) |
+    | Mínimo | €10 ganhos acumulados |
+    | Processamento | 1-2 dias úteis para chegar |
 
-### Timing de Pagamento
-
-| Dia Ganho | Pagamento Comunidade | Pagamento Top Expert |
-|-----------|---------------------|----------------------|
-| Segunda | Próxima Segunda | Terça |
-| Terça | Próxima Segunda | Quarta |
-| ... | ... | ... |
+  </Tab>
+</Tabs>
 
 ## Compreender os Seus Ganhos
 
-### Painel de Ganhos
+### Visão Geral do Dashboard
 
-O seu painel mostra:
+O seu dashboard de ganhos mostra:
 
-- **Pendente**: Consultas ainda não concluídas
-- **Disponível**: Pronto para pagamento
-- **Em Trânsito**: A ser transferido para o seu banco
-- **Pago**: Depositado com sucesso
+| Estado | Descrição |
+|--------|-----------|
+| Pendente | Consultas ainda não concluídas |
+| Disponível | Pronto para pagamento |
+| Em Trânsito | A ser transferido para o seu banco |
+| Pago | Depositado com sucesso |
 
-### Detalhes de Transação
+### Detalhes da Transação
 
 Cada transação mostra:
 
 - Nome do paciente
 - Serviço prestado
-- Valor bruto
-- Taxa de plataforma
-- Valor líquido (os seus ganhos)
+- Montante bruto
+- Taxa da plataforma
+- Montante líquido (os seus ganhos)
 
-## Impostos & Relatórios
+## Impostos e Relatórios
 
-### Responsabilidade Fiscal
+<Accordions>
+  <Accordion title="Responsabilidade Fiscal">
+    Como profissional independente, é responsável por:
 
-Como profissional independente, é responsável por:
+    - Declarar os seus ganhos
+    - Pagar impostos aplicáveis
+    - Manter registos
 
-- Declarar os seus ganhos
-- Pagar impostos aplicáveis
-- Manter registos
+    A Eleva Care não retém impostos. Consulte um profissional fiscal para a sua situação.
 
-### Documentação
+  </Accordion>
+  <Accordion title="Documentação Fornecida">
+    A Eleva Care fornece:
 
-A Eleva Care fornece:
+    - Extratos mensais de ganhos
+    - Resumo anual para declaração fiscal
+    - Exportação de histórico de transações
 
-- Extratos de ganhos mensais
-- Resumo anual para declaração fiscal
-- Exportação de histórico de transações
+  </Accordion>
+</Accordions>
 
-### Retenção de Impostos
-
-A Eleva Care não retém impostos. Consulte um profissional fiscal para a sua situação específica.
-
-## Reembolsos & Cancelamentos
+## Reembolsos e Cancelamentos
 
 ### Cancelamentos de Pacientes
 
-Quando os pacientes cancelam:
-
-| Janela de Cancelamento | Reembolso Paciente | Os Seus Ganhos |
-|------------------------|-------------------|----------------|
+| Janela de Cancelamento | Reembolso ao Paciente | Seus Ganhos |
+|------------------------|----------------------|-------------|
 | 48+ horas antes | 100% | €0 |
 | 24-48 horas antes | 50% | 50% |
 | Menos de 24 horas | 0% | 100% |
 
-### Os Seus Cancelamentos
+### Seus Cancelamentos
 
 Se cancelar uma consulta:
 
-- Paciente recebe reembolso total
+- O paciente recebe reembolso total
 - Não recebe ganhos
-- Pode afetar a sua avaliação
+- Pode afetar a sua avaliação e elegibilidade Top Expert
 
 <Callout type="warning">
-  Cancelamentos frequentes impactam a sua pontuação de fiabilidade e podem afetar a elegibilidade para Top Expert.
+  Cancelamentos frequentes impactam a sua pontuação de fiabilidade e podem afetar a elegibilidade
+  para Top Expert.
 </Callout>
 
 ## Maximizar Ganhos
 
-### Otimizar Preços
+<Accordions>
+  <Accordion title="Otimizar Preços">
+    - Pesquise tarifas da concorrência
+    - Considere a sua experiência e credenciais
+    - Ajuste baseado na procura
 
-- Pesquise taxas de concorrentes
-- Considere a sua experiência e credenciais
-- Ajuste com base na procura
+  </Accordion>
+  <Accordion title="Reduzir Cancelamentos">
+    - Envie lembretes de consulta
+    - Responda prontamente a inquéritos
+    - Mantenha disponibilidade precisa
 
-### Reduzir Cancelamentos
+  </Accordion>
+  <Accordion title="Atualizar para Subscrição">
+    Se tem marcações consistentes, o plano de subscrição aumenta significativamente os seus ganhos
+    por consulta.
 
-- Envie lembretes de consultas
-- Responda prontamente a pedidos
-- Mantenha disponibilidade precisa
+  </Accordion>
+  <Accordion title="Trabalhar para Top Expert">
+    Top Experts desfrutam de:
 
-### Atualizar para Subscrição
+    - Taxas de plataforma mais baixas (8-15%)
+    - Pagamentos diários
+    - Destaque (mais marcações)
 
-Se tem marcações consistentes, o plano de subscrição aumenta significativamente os seus ganhos por consulta.
-
-### Trabalhar para Top Expert
-
-Os Top Experts beneficiam de:
-
-- Taxas de plataforma mais baixas (8-15%)
-- Pagamentos diários
-- Posicionamento destacado (mais marcações)
+  </Accordion>
+</Accordions>
 
 ## Resolução de Problemas
 
-### Pagamento Não Recebido
+<Accordions>
+  <Accordion title="Pagamento Não Recebido">
+    1. Verifique o estado do Stripe Connect
+    2. Verifique os detalhes da conta bancária
+    3. Assegure que o limite mínimo foi atingido
+    4. Contacte o suporte se ainda faltar
 
-1. Verifique o estado do Stripe Connect
-2. Verifique os detalhes da conta bancária
-3. Garanta que o limite mínimo foi atingido
-4. Contacte o suporte se ainda faltar
+  </Accordion>
+  <Accordion title="Montante Incorreto">
+    Reveja o detalhamento da transação:
 
-### Valor Incorreto
+    - Verifique o montante bruto
+    - Verifique a taxa da plataforma
+    - Confirme quaisquer reembolsos aplicados
 
-Reveja a discriminação da transação:
-- Verifique o valor bruto
-- Verifique a taxa de plataforma
-- Confirme quaisquer reembolsos
+  </Accordion>
+  <Accordion title="Problemas com Stripe">
+    Para problemas específicos do Stripe:
 
-### Problemas com Stripe
+    - Entre no dashboard Stripe Express
+    - Verifique requisitos de verificação
+    - Atualize informação bancária se necessário
 
-Para problemas específicos do Stripe:
-- Aceda ao painel Stripe Express
-- Verifique requisitos de verificação
-- Atualize informação bancária se necessário
+  </Accordion>
+</Accordions>
 
-## Precisa de Ajuda?
+---
 
-Para questões relacionadas com ganhos:
-
-- **Email**: billing@eleva.care
-- **Suporte**: expert-support@eleva.care
-
+<Cards>
+  <Card title="Estratégia de Preços" href="/docs/expert/earnings/pricing">
+    Otimize os preços das suas consultas
+  </Card>
+  <Card title="Benefícios Top Expert" href="/docs/expert/top-expert/benefits">
+    Veja o que desbloqueia com o estatuto Top Expert
+  </Card>
+</Cards>
