--- a/src/content/docs/expert/pt/earnings/pricing.mdx
+++ b/src/content/docs/expert/pt/earnings/pricing.mdx
@@ -1,202 +1,205 @@
 ---
 title: Estratégia de Preços
-description: Como definir preços competitivos que reflitam a sua expertise e atraiam pacientes.
+description: Como definir preços competitivos que refletem a sua expertise e atraem pacientes.
 ---
 
 # Estratégia de Preços
 
-Definir o preço certo é crucial para construir uma prática bem-sucedida na Eleva Care. Este guia ajuda-o a desenvolver uma estratégia de preços que funcione.
+Definir o preço certo é crucial para construir uma prática de sucesso na Eleva Care. Este guia ajuda-o a desenvolver uma estratégia de preços que funciona.
 
 ## Princípios de Preços
 
-### Preços Baseados em Valor
+<Tabs items={['Baseado em Valor', 'Posição de Mercado']}>
+  <Tab value="Baseado em Valor">
+    **Preços Baseados em Valor**
 
-Defina preços com base no valor que fornece, não apenas no tempo gasto:
+    Defina preços baseados no valor que fornece, não apenas no tempo gasto:
 
-- A sua expertise e credenciais
-- Resultados dos pacientes
-- Formação especializada
-- Anos de experiência
+    - A sua expertise e credenciais
+    - Resultados que entrega aos pacientes
+    - Formação especializada que possui
+    - Anos de experiência
 
-### Posicionamento de Mercado
+  </Tab>
+  <Tab value="Posição de Mercado">
+    **Posicionamento de Mercado**
 
-Considere onde quer posicionar-se:
+    Considere onde quer posicionar-se:
 
-| Posição | Características | Intervalo de Preço |
-|---------|-----------------|-------------------|
-| **Premium** | Experiência extensa, credenciais especializadas | €120-200+ |
-| **Médio** | Experiência sólida, boas avaliações | €80-120 |
-| **Entrada** | A construir experiência, a crescer base de pacientes | €50-80 |
+    | Posição | Características | Intervalo de Preço |
+    |---------|-----------------|-------------------|
+    | Premium | Experiência extensa, credenciais especializadas | €120-200+ |
+    | Médio | Experiência sólida, boas avaliações | €80-120 |
+    | Entrada | A construir experiência, a crescer base de pacientes | €50-80 |
+
+  </Tab>
+</Tabs>
 
 ## Fatores que Afetam o Preço
 
-### As Suas Credenciais
+<Accordions>
+  <Accordion title="Credenciais">
+    Credenciais mais elevadas justificam preços mais altos:
 
-Credenciais mais altas justificam preços mais altos:
+    - Graus avançados (Doutoramento, Mestrado)
+    - Certificações especializadas
+    - Investigação publicada
+    - Palestras e conferências
 
-- Graus avançados (PhD, Mestrado)
-- Certificações especializadas
-- Investigação publicada
-- Palestras
+  </Accordion>
+  <Accordion title="Nível de Experiência">
+    | Experiência | Premium Típico |
+    |-------------|----------------|
+    | 0-2 anos | Taxa base |
+    | 3-5 anos | +10-20% |
+    | 6-10 anos | +20-35% |
+    | 10+ anos | +35-50%+ |
 
-### Nível de Experiência
+  </Accordion>
+  <Accordion title="Especialização">
+    Serviços especializados frequentemente comandam preços mais altos:
 
-| Experiência | Prémio Típico |
-|-------------|---------------|
-| 0-2 anos | Taxa base |
-| 3-5 anos | +10-20% |
-| 6-10 anos | +20-35% |
-| 10+ anos | +35-50%+ |
+    - Expertise rara
+    - Condições complexas
+    - Técnicas inovadoras
+    - Formação exclusiva
 
-### Especialização
+  </Accordion>
+  <Accordion title="Procura de Mercado">
+    Ajuste baseado em:
 
-Serviços especializados frequentemente comandam preços mais altos:
+    - A sua taxa de marcações
+    - Comprimento da lista de espera
+    - Preços da concorrência
+    - Padrões sazonais
 
-- Expertise rara
-- Condições complexas
-- Técnicas inovadoras
-- Formação exclusiva
-
-### Procura de Mercado
-
-Ajuste com base em:
-
-- A sua taxa de marcações
-- Comprimento da lista de espera
-- Preços de concorrentes
-- Padrões sazonais
+  </Accordion>
+</Accordions>
 
 ## Preços por Tipo de Serviço
 
-### Consultas Iniciais
-
-Primeiras consultas tipicamente incluem:
-
-- Avaliação abrangente
-- Planeamento de tratamento
-- Tempo alargado
-
-**Intervalo Típico**: €80-150 por 60 minutos
-
-### Sessões de Seguimento
-
-Consultas contínuas:
-
-- Revisão de progresso
-- Continuação de tratamento
-- Duração mais curta
-
-**Intervalo Típico**: €60-100 por 45 minutos
-
-### Serviços Especializados
-
-Consultas direcionadas:
-
-- Preparação pré-cirúrgica
-- Avaliações específicas
-- Sessões intensivas
-
-**Intervalo Típico**: €100-180 por 60 minutos
+| Tipo de Serviço | Intervalo Típico |
+|-----------------|------------------|
+| Consulta Inicial (60 min) | €80 - €150 |
+| Sessão de Seguimento (45 min) | €60 - €100 |
+| Serviço Especializado (60 min) | €100 - €180 |
+| Check-In Rápido (30 min) | €40 - €70 |
 
 ## Estratégias de Preços
 
-### Preços em Níveis
+<Tabs items={['Escalonado', 'Pacotes', 'Introdutório']}>
+  <Tab value="Escalonado">
+    **Preços Escalonados**
 
-Ofereça diferentes pontos de preço:
+    Ofereça diferentes pontos de preço para diferentes necessidades:
 
-```
-Consulta Inicial (60 min): €120
-Seguimento Standard (45 min): €80
-Seguimento Breve (30 min): €50
-Sessão Alargada (90 min): €160
-```
+    | Serviço | Duração | Preço |
+    |---------|---------|-------|
+    | Consulta Inicial | 60 min | €120 |
+    | Seguimento Standard | 45 min | €80 |
+    | Seguimento Breve | 30 min | €50 |
+    | Sessão Prolongada | 90 min | €160 |
 
-### Descontos de Pacotes
+  </Tab>
+  <Tab value="Pacotes">
+    **Descontos de Pacote** (Em Breve)
 
-Encoraje compromisso com pacotes (brevemente):
+    Encoraje compromisso com pacotes:
 
-- 3 sessões: 10% desconto
-- 5 sessões: 15% desconto
-- 10 sessões: 20% desconto
+    | Pacote | Desconto |
+    |--------|----------|
+    | 3 sessões | 10% desconto |
+    | 5 sessões | 15% desconto |
+    | 10 sessões | 20% desconto |
 
-### Preços Introdutórios
+  </Tab>
+  <Tab value="Introdutório">
+    **Preços Introdutórios**
 
-Atraia novos pacientes:
+    Atraia novos pacientes:
 
-- Taxas mais baixas por tempo limitado
-- Desconto na primeira consulta
-- Ofertas especiais
+    - Tarifas mais baixas por tempo limitado
+    - Desconto na primeira consulta
+    - Ofertas promocionais especiais
 
-<Callout type="tip">
-  Considere oferecer uma taxa ligeiramente mais baixa para as suas primeiras consultas para construir avaliações. Aumente os preços quando tiver uma base sólida de avaliações.
+  </Tab>
+</Tabs>
+
+<Callout type="info">
+  Considere oferecer uma tarifa ligeiramente mais baixa para as suas primeiras consultas para
+  construir avaliações. Aumente preços quando tiver uma base sólida de avaliações.
 </Callout>
 
-## Calcular a Sua Taxa
+## Calcular a Sua Tarifa
 
-### Passo 1: Determinar Rendimento Alvo
+<Steps>
+  <Step>
+    ### Determinar Rendimento Alvo
 
-Considere:
+    Considere o rendimento mensal/anual desejado, horas que quer trabalhar, despesas empresariais e
+    impostos.
 
-- Rendimento mensal/anual desejado
-- Número de horas que quer trabalhar
-- Despesas do negócio
-- Impostos
+  </Step>
+  <Step>
+    ### Considerar Taxas da Plataforma
 
-### Passo 2: Incluir Taxas de Plataforma
+    | Seu Preço | Comissão (12%) | Você Recebe |
+    |-----------|----------------|-------------|
+    | €80 | €9.60 | €70.40 |
+    | €100 | €12.00 | €88.00 |
+    | €120 | €14.40 | €105.60 |
 
-Lembre-se de contabilizar as taxas da Eleva Care:
+  </Step>
+  <Step>
+    ### Calcular Equivalente Horário
 
-| O Seu Preço | Comissão (12%) | Você Recebe |
-|-------------|----------------|-------------|
-| €80 | €9,60 | €70,40 |
-| €100 | €12,00 | €88,00 |
-| €120 | €14,40 | €105,60 |
+    Inclua tempo para a consulta em si, preparação, notas e documentação, e tarefas administrativas.
 
-### Passo 3: Calcular Equivalente por Hora
+    **Exemplo**: Consulta de 60 min + 30 min preparação/notas = 90 min tempo total de trabalho
 
-Inclua tempo para:
+    Se cobra €120 e trabalha 90 minutos, a sua taxa efetiva é €80/hora (menos taxas).
 
-- A consulta em si
-- Preparação
-- Notas e documentação
-- Tarefas administrativas
-
-**Exemplo**: Consulta de 60 min + 30 min prep/notas = 90 min de trabalho total
-
-Se cobra €120 e trabalha 90 minutos, a sua taxa efetiva é €80/hora (menos taxas).
+  </Step>
+</Steps>
 
 ## Ajustar os Seus Preços
 
-### Quando Aumentar Preços
+<Tabs items={['Quando Aumentar', 'Quando Baixar']}>
+  <Tab value="Quando Aumentar">
+    **Aumente Preços Quando:**
 
-- Consistentemente com agenda cheia
-- Lista de espera longa
-- Ganhou novas credenciais
-- Crescimento positivo de avaliações
-- Após 6-12 meses de experiência
+    - Consistentemente esgotado
+    - Lista de espera longa
+    - Ganhou novas credenciais
+    - Crescimento positivo de avaliações
+    - Após 6-12 meses de experiência
 
-### Como Aumentar Preços
+    **Como Aumentar:**
+    1. Dê aviso prévio a pacientes existentes
+    2. Atualize preços dos serviços
+    3. Considere manter preços antigos brevemente para pacientes existentes
+    4. Comunique valor, não apenas preço
 
-1. Dê aviso prévio aos pacientes existentes
-2. Atualize preços dos serviços
-3. Considere manter taxas antigas temporariamente para pacientes existentes
-4. Comunique valor, não apenas preço
+  </Tab>
+  <Tab value="Quando Baixar">
+    **Baixe Preços Quando:**
 
-### Quando Baixar Preços
+    - Taxa de marcações baixa
+    - Novo na plataforma
+    - A entrar num nicho competitivo
+    - A construir a sua base de pacientes
 
-- Taxa de marcações baixa
-- Novo na plataforma
-- A entrar num nicho competitivo
-- A construir a sua base de pacientes
+  </Tab>
+</Tabs>
 
-## Pesquisa de Concorrentes
+## Pesquisa de Concorrência
 
 ### Como Pesquisar
 
-1. Explore perfis de especialistas na sua especialidade
+1. Navegue perfis de especialistas na sua especialidade
 2. Note as suas credenciais e preços
 3. Compare níveis de experiência
-4. Considere as suas avaliações
+4. Considere as suas classificações de avaliação
 
 ### O Que Comparar
 
@@ -208,54 +211,47 @@ Se cobra €120 e trabalha 90 minutos, a sua taxa efetiva é €80/hora (menos t
 | Credenciais semelhantes | Médio |
 
 <Callout type="info">
-  Não compita apenas pelo preço. Foque-se na sua proposta de valor única - expertise, abordagem, personalidade.
+  Não compete apenas em preço. Foque na sua proposta de valor única — expertise, abordagem,
+  personalidade.
 </Callout>
 
 ## Erros Comuns
 
-### Preços Demasiado Baixos
+<Accordions>
+  <Accordion title="Preços Demasiado Baixos">
+    - Desvaloriza a sua expertise
+    - Atrai pacientes sensíveis ao preço
+    - Difícil aumentar depois
+    - Qualidade percebida mais baixa
 
-- Desvaloriza a sua expertise
-- Atrai pacientes sensíveis ao preço
-- Difícil de aumentar depois
-- Perceção de qualidade mais baixa
+  </Accordion>
+  <Accordion title="Preços Demasiado Altos Inicialmente">
+    - Poucas marcações para construir avaliações
+    - Mais difícil estabelecer presença
+    - Pode precisar baixar (parece mal)
 
-### Preços Demasiado Altos Inicialmente
+  </Accordion>
+  <Accordion title="Ignorar Taxas">
+    - Preço €100, pensa que vai ganhar €100
+    - Esquece de considerar 8-20% de taxas
+    - Acaba com taxa efetiva mais baixa
 
-- Poucas marcações para construir avaliações
-- Mais difícil estabelecer presença
-- Pode precisar de baixar (parece mal)
+  </Accordion>
+  <Accordion title="Tamanho Único">
+    - Mesmo preço para todos os serviços
+    - Perda de oportunidade para ofertas premium
+    - Não serve diferentes necessidades
 
-### Ignorar Taxas
+  </Accordion>
+</Accordions>
 
-- Preço de €100, pensa que vai ganhar €100
-- Esquece de incluir taxas de 8-20%
-- Acaba com taxa efetiva mais baixa
+---
 
-### Uma Solução para Tudo
-
-- Mesmo preço para todos os serviços
-- Perde oportunidade de ofertas premium
-- Não serve diferentes necessidades
-
-## Testar os Seus Preços
-
-### Testes A/B (Quando Possível)
-
-- Tente diferentes preços para serviços semelhantes
-- Acompanhe taxas de marcação
-- Analise feedback dos pacientes
-
-### Ajustes Sazonais
-
-- Períodos de maior procura
-- Horários de férias
-- Época de regresso às aulas
-
-## Precisa de Ajuda?
-
-Para apoio em estratégia de preços:
-
-- **Email**: expert-support@eleva.care
-- **Recursos**: Consulte os nossos fóruns da Comunidade de Especialistas
-
+<Cards>
+  <Card title="Pagamentos e Ganhos" href="/docs/expert/earnings/payouts">
+    Compreender processamento de pagamentos
+  </Card>
+  <Card title="Benefícios Top Expert" href="/docs/expert/top-expert/benefits">
+    Taxas mais baixas com estatuto Top Expert
+  </Card>
+</Cards>
