--- a/src/content/docs/workspace/en/team/experts.mdx
+++ b/src/content/docs/workspace/en/team/experts.mdx
@@ -9,46 +9,53 @@ Your team of healthcare professionals is the heart of your workspace. This guide
 
 ## Expert Types
 
-### In-House Experts
+<Tabs items={['In-House Experts', 'Network Experts']}>
+  <Tab value="In-House Experts">
+    Healthcare professionals employed by or contracted with your organization:
 
-Healthcare professionals employed by or contracted with your organization:
+    - Work exclusively or primarily through your workspace
+    - Use your workspace's branding
+    - Subject to your marketing fee
+    - Managed through your dashboard
 
-- Work exclusively or primarily through your workspace
-- Use your workspace's branding
-- Subject to your marketing fee
-- Managed through your dashboard
+  </Tab>
+  <Tab value="Network Experts">
+    Independent professionals from Eleva Care's expert network:
 
-### Network Experts
+    - Work with multiple workspaces
+    - Maintain their individual brand
+    - Subject to your marketing fee when booked through your workspace
+    - Can be featured on your workspace profile
 
-Independent professionals from Eleva Care's expert network:
-
-- Work with multiple workspaces
-- Maintain their individual brand
-- Subject to your marketing fee when booked through your workspace
-- Can be featured on your workspace profile
+  </Tab>
+</Tabs>
 
 ## Adding Experts to Your Workspace
 
-### Option 1: Invite Existing Eleva Care Experts
+<Accordions>
+  <Accordion title="Invite Existing Eleva Care Experts">
+    If the expert already has an Eleva Care profile:
 
-If the expert already has an Eleva Care profile:
+    1. Go to **Team Management** → **Invite Expert**
+    2. Enter their email address
+    3. They receive an invitation to join your workspace
+    4. Once accepted, their profile appears under your workspace
 
-1. Go to **Team Management** → **Invite Expert**
-2. Enter their email address
-3. They receive an invitation to join your workspace
-4. Once accepted, their profile appears under your workspace
+  </Accordion>
+  <Accordion title="Invite New Experts">
+    For experts new to Eleva Care:
 
-### Option 2: Invite New Experts
+    1. Go to **Team Management** → **Invite New Expert**
+    2. Enter their email and name
+    3. They receive an invitation to create an Eleva Care profile
+    4. After setup, they're automatically added to your workspace
 
-For experts new to Eleva Care:
-
-1. Go to **Team Management** → **Invite New Expert**
-2. Enter their email and name
-3. They receive an invitation to create an Eleva Care profile
-4. After setup, they're automatically added to your workspace
+  </Accordion>
+</Accordions>
 
 <Callout type="info">
-  **Expert Limits**: Starter plans support up to 3 experts, Professional up to 10, and Enterprise is unlimited.
+  **Expert Limits**: Starter plans support up to 3 experts, Professional up to 10, and Enterprise
+  is unlimited.
 </Callout>
 
 ## Expert Dashboard
@@ -60,7 +67,7 @@ From your workspace dashboard, you can view:
 | Metric | Description |
 |--------|-------------|
 | **Total Experts** | Number of experts in your workspace |
-| **Active Experts** | Experts who have taken bookings in the last 30 days |
+| **Active Experts** | Experts with bookings in the last 30 days |
 | **Published Profiles** | Experts with visible profiles |
 | **Pending Invitations** | Invitations not yet accepted |
 
@@ -75,20 +82,28 @@ From your workspace dashboard, you can view:
 
 Experts maintain their individual tier when joining your workspace:
 
-### Community Experts
+<Tabs items={['Community Experts', 'Top Experts']}>
+  <Tab value="Community Experts">
+    | Fee Type | Amount |
+    |----------|--------|
+    | Platform fee | 12-20% |
+    | Workspace fee | 10-25% |
+    | Expert net | 60-77% |
 
-- Platform fee: 12-20%
-- Your workspace fee: 10-25%
-- Expert net: 60-77%
+  </Tab>
+  <Tab value="Top Experts">
+    | Fee Type | Amount |
+    |----------|--------|
+    | Platform fee | 8-15% |
+    | Workspace fee | 10-25% |
+    | Expert net | 60-82% |
 
-### Top Experts
-
-- Platform fee: 8-15%
-- Your workspace fee: 10-25%
-- Expert net: 60-82%
+  </Tab>
+</Tabs>
 
 <Callout type="success">
-  **Expert Protection**: Experts keep their tier benefits when joining a workspace. Top experts still pay lower platform fees.
+  **Expert Protection**: Experts keep their tier benefits when joining a workspace. Top experts
+  still pay lower platform fees.
 </Callout>
 
 ## Commission Visibility
@@ -96,60 +111,83 @@ Experts maintain their individual tier when joining your workspace:
 Your experts can see a detailed breakdown of each booking:
 
 ```
-Booking Amount: $100.00
-├─ Eleva Platform Fee: $8.00 (8%)
-├─ Workspace Marketing Fee: $15.00 (15%)
-└─ Expert Net: $77.00 (77%)
+Booking Amount: €100.00
+├─ Eleva Platform Fee: €8.00 (8%)
+├─ Workspace Marketing Fee: €15.00 (15%)
+└─ Expert Net: €77.00 (77%)
 ```
 
 This transparency helps build trust with your team.
 
 ## Managing Expert Permissions
 
-### Workspace Admins Can:
+<Tabs items={['Admins Can', 'Admins Cannot']}>
+  <Tab value="Admins Can">
+    - View expert availability and bookings
+    - Access aggregate analytics
+    - Configure workspace-wide settings
+    - Remove experts from the workspace
 
-- View expert availability and bookings
-- Access aggregate analytics
-- Configure workspace-wide settings
-- Remove experts from the workspace
+  </Tab>
+  <Tab value="Admins Cannot">
+    - Change expert's individual settings
+    - Access expert's personal financial details
+    - Modify expert's profile without permission
+    - View bookings from other workspaces
 
-### Workspace Admins Cannot:
-
-- Change expert's individual settings
-- Access expert's personal financial details
-- Modify expert's profile without permission
-- View bookings from other workspaces
+  </Tab>
+</Tabs>
 
 ## Removing Experts
 
 To remove an expert from your workspace:
 
-1. Go to **Team Management**
-2. Find the expert
-3. Click **Remove from Workspace**
-4. Confirm the action
+<Steps>
+  <Step>
+    ### Navigate to Team
+
+    Go to **Team Management** in your dashboard.
+
+  </Step>
+  <Step>
+    ### Find Expert
+
+    Locate the expert you want to remove.
+
+  </Step>
+  <Step>
+    ### Remove
+
+    Click **Remove from Workspace** and confirm.
+
+  </Step>
+</Steps>
 
 <Callout type="warning">
-  **Note**: Removing an expert doesn't delete their Eleva Care profile. They can continue working independently or with other workspaces.
+  **Note**: Removing an expert doesn't delete their Eleva Care profile. They can continue working
+  independently or with other workspaces.
 </Callout>
 
 ## Best Practices
 
-### Onboarding
+<Accordions>
+  <Accordion title="Onboarding">
+    1. **Clear Expectations**: Explain your marketing fee and value proposition
+    2. **Support**: Help with profile optimization
+    3. **Training**: Introduce them to the platform features
+    4. **Communication**: Set up regular check-ins
 
-1. **Clear Expectations**: Explain your marketing fee and value proposition
-2. **Support**: Help with profile optimization
-3. **Training**: Introduce them to the platform features
-4. **Communication**: Set up regular check-ins
+  </Accordion>
+  <Accordion title="Retention">
+    1. **Competitive Fees**: Keep your marketing fee reasonable
+    2. **Patient Volume**: Focus on driving bookings to your experts
+    3. **Support**: Provide administrative and marketing support
+    4. **Recognition**: Highlight top performers
 
-### Retention
+  </Accordion>
+</Accordions>
 
-1. **Competitive Fees**: Keep your marketing fee reasonable
-2. **Patient Volume**: Focus on driving bookings to your experts
-3. **Support**: Provide administrative and marketing support
-4. **Recognition**: Highlight top performers
-
-## Next Steps
+---
 
 <Cards>
   <Card title="Send Invitations" href="/docs/workspace/team/invitations">
